[[bin]]
name = "sinexctl"
path = "src/main.rs"

[lib]
name = "sinexctl"
path = "src/lib.rs"

[package]
name = "sinexctl"

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[package.authors]
workspace = true

[dependencies]
rand                = { workspace = true }
clap_complete       = "4"
serde_yaml          = "0.9"
tabled              = "0.17"
indicatif           = "0.17"
console             = "0.15"
directories         = "5.0"
rustls              = "0.22"
rustls-pemfile      = "2.1"
rustls-native-certs = "0.8"
inquire             = "0.7"
syntect             = "5.2"
atty                = "0.2"
ratatui             = "0.28"
crossterm           = "0.29"

[dependencies.sinex-primitives]
path = "../lib/sinex-primitives"


[dependencies.sinex-db]
path = "../lib/sinex-db"

[dependencies.sqlx]
workspace = true
features = ["runtime-tokio", "tls-rustls", "postgres"]

[dependencies.humantime]
version = "2.1"

[dependencies.clap]
workspace = true
features = ["derive", "env"]

[dependencies.tokio]
workspace = true
features = ["rt-multi-thread", "macros", "time", "signal"]

[dependencies.reqwest]
version = "0.12"
features = ["json", "rustls-tls", "stream"]

[dependencies.futures]
workspace = true

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies.serde_json]
workspace = true

[dependencies.color-eyre]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.tracing-subscriber]
workspace = true
features = ["env-filter"]

[dependencies.time]
workspace = true

[dev-dependencies]
wiremock    = "0.6"
assert_cmd  = "2"
predicates  = "3"
tempfile    = "3"
toml        = "0.8"
serial_test = "3"

[dependencies.toml]
version = "0.8"

[dev-dependencies.proptest]
workspace = true

[dev-dependencies.insta]
workspace = true

[dev-dependencies.tokio]
workspace = true
features = ["rt-multi-thread", "macros"]

[dev-dependencies.serde_json]
workspace = true

[dev-dependencies.xtask]
path = "../../xtask"

[dev-dependencies.xtask-macros]
path = "../../xtask/macros"

[dev-dependencies.sinex-primitives]
path = "../lib/sinex-primitives"
features = ["testing"]

[lints]
workspace = true
