[[bin]]
name = "sinexctl"
path = "src/main.rs"

[[bin]]
name = "sinex-mcp-server"
path = "src/bin/sinex-mcp-server.rs"

[lib]
name = "sinexctl"
path = "src/lib.rs"

[package]
name = "sinexctl"

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[package.authors]
workspace = true

[dependencies]
rand                = { workspace = true }
blake3              = { workspace = true }
libc                = { workspace = true }
clap_complete       = { workspace = true }
serde_yml = { workspace = true }
tabled              = { workspace = true }
console             = { workspace = true }
directories         = "5.0"
rustls              = "0.23"
ratatui             = { version = "0.30", default-features = false, features = ["crossterm", "underline-color"] }
crossterm           = "0.29"
walkdir             = { workspace = true }

[dependencies.sinex-primitives]
path = "../lib/sinex-primitives"


[dependencies.sinex-db]
path = "../lib/sinex-db"

[dependencies.sinex-node-sdk]
path = "../lib/sinex-node-sdk"
default-features = false
features = ["db"]

[dependencies.camino]
workspace = true

[dependencies.sqlx]
workspace = true
features = ["runtime-tokio", "tls-rustls", "postgres"]

[dependencies.clap]
workspace = true
features = ["derive", "env"]

[dependencies.tokio]
workspace = true
features = ["rt-multi-thread", "macros", "time", "signal"]

[dependencies.reqwest]
workspace = true
features = ["json", "query", "rustls"]

[dependencies.futures]
workspace = true

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies.serde_json]
workspace = true

[dependencies.serde_path_to_error]
workspace = true

[dependencies.color-eyre]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.tracing-subscriber]
workspace = true
features = ["env-filter"]

[dependencies.time]
workspace = true

[dev-dependencies]
wiremock    = "0.6"
assert_cmd  = "2"
predicates  = "3"
tempfile    = { workspace = true }
toml        = { workspace = true }
serial_test = "3"

[dependencies.toml]
workspace = true

[dev-dependencies.proptest]
workspace = true

[dev-dependencies.insta]
workspace = true

[dev-dependencies.tokio]
workspace = true
features = ["rt-multi-thread", "macros"]

[dev-dependencies.serde_json]
workspace = true

[dev-dependencies.xtask]
path = "../../xtask"

[dev-dependencies.xtask-macros]
path = "../../xtask/macros"

[dev-dependencies.sinex-primitives]
path = "../lib/sinex-primitives"
features = ["testing"]

[lints]
workspace = true
