[package]
name = "sinex-analytics-automaton"
version = "0.1.0"
edition = "2021"

[dependencies]
sinex-satellite-sdk = { path = "../sinex-satellite-sdk" }
sinex-services = { path = "../sinex-services" }
sinex-db = { path = "../sinex-db" }
sinex-ulid = { path = "../sinex-ulid" }
sinex-core = { path = "../sinex-core" }

tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4.0", features = ["derive"] }