[package]
name = "sinex-annex"
version = "0.4.2"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
blake3.workspace = true
tempfile.workspace = true
which.workspace = true
sqlx.workspace = true
chrono.workspace = true
gethostname.workspace = true

# Internal dependencies
sinex-core = { path = "../sinex-core" }
sinex-db = { path = "../sinex-db" }
sinex-ulid = { path = "../sinex-ulid" }