[package]
name = "sinex-collector"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Core sinex dependencies
sinex-core = { path = "../sinex-core" }
sinex-db = { path = "../sinex-db" }
sinex-events = { path = "../sinex-events" }
sinex-ulid = { path = "../sinex-ulid" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Command line
clap = { version = "4.0", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system watching for config hot-reload
notify = "6.0"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "json"] }
chrono = { version = "0.4", features = ["serde"] }

# Networking for metrics server
axum = "0.7"
hyper = "1.0"
tower = "0.4"

# Metrics
prometheus = "0.13"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
gethostname = "0.4"
once_cell = "1.19"
dirs = "5.0"
sys-info = "0.9"

# Validation
jsonschema = "0.17"
validator = { version = "0.16", features = ["derive"] }

# Testing dependencies
[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "sinex-collector"
path = "src/main.rs"