[package]
name = "sinex-config"
version = "0.1.0"
edition = "2021"
description = "Configuration management utilities for the Sinex event capture system"

[dependencies]
# Configuration parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Time parsing
chrono = { version = "0.4", features = ["serde"] }

# Error handling
sinex-errors = { path = "../sinex-errors" }

# Validation
regex = "1.0"