[package]
name = "sinex-config"
version = "0.1.0"
edition = "2021"
description = "Configuration management utilities for the Sinex event capture system"

[dependencies]
# Configuration parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Time parsing
chrono = { version = "0.4", features = ["serde"] }

# Error handling - TODO: extract from sinex-core when circular dependencies are resolved
# sinex-error = { path = "../sinex-error" }

# Validation
regex = "1.0"
validator = { workspace = true }

# Configuration management
figment = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }