[package]
name = "sinex-core-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Core dependencies for error handling and basic types
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }

# For ULID support
sinex-ulid = { path = "../sinex-ulid" }

# For event types
sinex-events = { path = "../sinex-events" }

# For validation types
sinex-validation = { path = "../sinex-validation" }

# For async types
tokio = { workspace = true }
async-trait = { workspace = true }

# For error handling
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }