[package]
name = "sinex-core-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Core dependencies for error handling and basic types
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true, optional = true }

# For ULID support
sinex-ulid = { path = "../sinex-ulid" }

# For strongly-typed IDs
paste = "1.0"
uuid = { workspace = true }

# For event types
sinex-events = { path = "../sinex-events" }

# For validation types
sinex-validation = { path = "../sinex-validation" }

# For error types
sinex-error = { path = "../sinex-error" }

# For async types
tokio = { workspace = true }
async-trait = { workspace = true }

# For error handling
anyhow = { workspace = true }

# For event constants
lazy_static = "1.4"

[features]
default = ["sqlx"]
sqlx = ["dep:sqlx", "sinex-ulid/sqlx"]

[dev-dependencies]
tempfile = { workspace = true }