[package]
name = "sinex-core-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Core types
sinex-core-types = { path = "../sinex-core-types" }
sinex-error = { path = "../sinex-error" }
sinex-validation = { path = "../sinex-validation" }

# Utilities
anyhow = { workspace = true }
bon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

# For chunking
blake3 = { workspace = true }
fastcdc = "3.0"

# For SQLite helpers
rusqlite = { workspace = true }

# For timestamp utilities
chrono = { workspace = true }

# For retry helpers
rand = { workspace = true }
tokio-retry = { workspace = true }

# For wait helpers
sqlx = { workspace = true }

# For tracing
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }