[package]
name = "sinex-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# For RawEvent and builders
sinex-ulid = { path = "../sinex-ulid" }

# For hostname in RawEventBuilder
gethostname = { workspace = true }

# For UUID
uuid = { workspace = true }

# For unified collector
async-trait = { workspace = true }
tokio = { workspace = true }
schemars = "0.8"

# sinex-db dependency removed to avoid circular dependency

# For validation
unicode-normalization = "0.1"
regex = { workspace = true }
url = { workspace = true }
jsonschema = { workspace = true }

# For EventSourceContext and RawEvent FromRow derive
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls"] }

# For configuration
toml = { workspace = true }

# For logging
tracing = { workspace = true }

# For path expansion
dirs = { workspace = true }

# For improved path validation (B2 replacement)
path-clean = "1.0"
sanitize-filename = "0.5"

