[package]
name = "sinex-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Database connection and query utilities for Sinex"

# Note: We're not making this crate a pure proc-macro crate
# because we also need regular library functionality

[dependencies]
sinex-ulid = { path = "../sinex-ulid", features = ["sqlx"] }
sinex-core-types = { path = "../sinex-core-types" }
sinex-events = { path = "../sinex-events" }
sinex-macros = { path = "../sinex-macros" }
sinex-validation = { path = "../sinex-validation" }
sinex-error = { path = "../sinex-error" }
sqlx = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
jsonschema = "0.17"
gethostname = { workspace = true }
urlencoding = "2.1"
blake3 = "1.5"
strum = { version = "0.26", features = ["derive"] }

# No additional dependencies needed for declarative macros

[dev-dependencies]
tokio-test = "0.4"