[package]
name = "sinex-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Database connection and query utilities for Sinex"

# Note: We're not making this crate a pure proc-macro crate
# because we also need regular library functionality

[dependencies]
sinex-types = { path = "../sinex-types" }
sinex-events = { path = "../sinex-events" }
sinex-macros = { path = "../sinex-macros", optional = true }
sqlx = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
jsonschema = "0.17"
gethostname = { workspace = true }
urlencoding = "2.1"
blake3 = "1.5"
strum = { version = "0.26", features = ["derive"] }
validator = { workspace = true }
bon = { workspace = true }
async-trait = "0.1"
futures = "0.3"
num-traits = "0.2"

# Query building
sea-query = { version = "0.30", features = ["with-uuid", "with-chrono", "with-json", "postgres-array"] }

# Migration system
sea-orm-migration = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls"], optional = true }
sinex-db-migration = { path = "./migration" }

[features]
# Migration feature is enabled by default for development convenience
# Consider disabling in production builds: default = []
default = ["migration"]
migration = ["dep:sea-orm-migration"]
macros = ["dep:sinex-macros"]

[build-dependencies]
# Removed sea-orm-codegen as we're using procedural macros instead

[dev-dependencies]
tokio-test = "0.4"
sinex-test-utils = { path = "../sinex-test-utils" }
anyhow = { workspace = true }