[package]
name = "sinex-desktop-satellite"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "sinex-desktop-satellite"
path = "src/main.rs"

[dependencies]
# Core dependencies
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["full"] }
futures = "0.3"
tracing.workspace = true
tracing-subscriber.workspace = true

# Configuration
clap = { workspace = true, features = ["derive"] }
serde.workspace = true
serde_json.workspace = true

# Time handling
chrono.workspace = true

# System integration
dirs.workspace = true

# Clipboard handling
copypasta = "0.10"

# Hash computation
blake3 = "1.5"

# URL parsing for clipboard files
urlencoding = "2.1"

# Host identification
gethostname = "0.4"

# Database integration (for blob storage)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Local dependencies
sinex-satellite-sdk = { path = "../sinex-satellite-sdk" }
sinex-core = { path = "../sinex-core" }
sinex-events = { path = "../sinex-events" }
sinex-annex = { path = "../sinex-annex" }
sinex-db = { path = "../sinex-db" }
sinex-ulid = { path = "../sinex-ulid" }