[package]
name = "sinex-document-ingestor"
version = "0.4.2"
edition = "2021"
description = "Unified document ingestor for all file types using source material registry"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"

# Sinex dependencies
sinex-satellite-sdk = { path = "../sinex-satellite-sdk" }
sinex-events = { path = "../sinex-events" }
sinex-db = { path = "../sinex-db" }
sinex-error = { path = "../sinex-error" }
sinex-ulid = { path = "../sinex-ulid" }

# File processing
mime_guess = "2.0"
blake3 = "1.0"