[package]
name = "sinex-error"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
chrono.workspace = true
sqlx.workspace = true
tokio.workspace = true
sinex-ulid = { path = "../sinex-ulid" }
displaydoc = "0.2"
indexmap = { version = "2.0", features = ["serde"] }
anyhow.workspace = true
color-eyre = { workspace = true }
serde_path_to_error = { workspace = true }
gethostname = { workspace = true }


[dev-dependencies]
criterion = "0.5"
sinex-test-utils = { path = "../sinex-test-utils" }

[lints]
workspace = true

[[bench]]
name = "error_bench"
harness = false