[package]
name = "sinex-events-terminal"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
sinex-core = { path = "../sinex-core" }
sinex-db = { path = "../sinex-db" }
sinex-ulid = { path = "../sinex-ulid" }
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
gethostname = "0.4"
rusqlite = { version = "0.30", features = ["bundled"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
regex = "1.10"
notify = "6.0"
glob = "0.3"
blake3 = "1.5"
whoami = "1.4"
nix = "0.27"