[package]
name = "sinex-events"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# Core async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization  
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time handling
chrono = { workspace = true }

# Database
sqlx = { workspace = true }

# IDs
uuid = { workspace = true }

# Core types with domain strings
sinex-types = { path = "../sinex-types" }

# System utilities
gethostname = { workspace = true }

# Validation and schema
schemars = { workspace = true, features = ["chrono", "uuid1"] }

# Logging
tracing = { workspace = true }

# Builder pattern
bon = { workspace = true }

# Macros
sinex-macros = { path = "../sinex-macros", optional = true }

# Lazy initialization
once_cell = { workspace = true }

# Build-time registry
inventory = { workspace = true }

[features]
default = ["sqlx", "macros"]
sqlx = ["sinex-types/sqlx"]
macros = ["dep:sinex-macros"]

# Temporarily disabled due to compilation issues
# [[bin]]
# name = "generate-schemas"
# path = "src/bin/generate_schemas.rs"
# required-features = []

