[package]
name = "sinex-fs"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
sinex-error = { path = "../sinex-error" }
sinex-constants = { path = "../sinex-constants" }
sinex-events = { path = "../sinex-events" }
tokio = { workspace = true, features = ["fs", "sync", "time"] }
notify.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
chrono.workspace = true
bon = { workspace = true }

[dev-dependencies]
tempfile = "3.8"

[lints]
workspace = true