[package]
name = "sinex-health-aggregator"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "sinex-health-aggregator"
path = "src/main.rs"

[dependencies]
# Core Sinex dependencies
sinex-core = { path = "../sinex-core" }
sinex-events = { path = "../sinex-events" }
sinex-satellite-sdk = { path = "../sinex-satellite-sdk" }
sinex-db = { path = "../sinex-db" }

# CLI parsing
clap = { version = "4.0", features = ["derive", "env"] }

# Async runtime
tokio = { workspace = true }

# Database (for potential direct queries if needed)
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System info
gethostname = "0.4"

# Collections (using std lib)

# Async traits
async-trait = { workspace = true }