[package]
name = "sinex-heartbeat"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
sinex-error = { path = "../sinex-error" }
sinex-events = { path = "../sinex-events" }
sinex-validation = { path = "../sinex-validation" }
tokio = { workspace = true, features = ["time", "sync"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true

[lints]
workspace = true