[package]
name = "sinex-host"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
sinex-core = { path = "../sinex-core" }
sinex-db = { path = "../sinex-db" }
sinex-services = { path = "../sinex-services" }
sinex-ulid = { path = "../sinex-ulid" }
sinex-annex = { path = "../sinex-annex" }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Web framework for RPC server
axum = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
hyper = "1.0"
hyper-util = { version = "0.1", features = ["server", "server-auto"] }

# JSON-RPC
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true, features = ["derive"] }

# Native messaging
byteorder = "1.5"

# Time handling
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
futures = "0.3"
